# immutable-data-structures

./: CMakeLists.txt  Makefile
src/: List.h  Utils.h  main.cpp
src/deque/: Deque.h
src/linkedlist/: LinkedList.h
tests/: DequeTests.cpp  LinkedListTests.cpp
